zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/Sesion_Diagnostico__c.object-meta.xml
<CustomObject>
    <description>Resultado del diagnostico guiado. Es la evidencia de que un caso se resolvio SIN cita, que es el escenario mas memorable del video segun el briefing.</description>
    <label>Sesion de diagnostico</label>
    <pluralLabel>Sesiones de diagnostico</pluralLabel>
    <nameField>
        <displayFormat>DIAG-{000000}</displayFormat>
        <label>Numero de sesion</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>