zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <description>Unidad diagnosticada. Puede quedar vacia si el usuario aun no se identifica.</description>
    <label>Unidad</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Sesiones de diagnostico</relationshipLabel>
    <relationshipName>Sesiones_Diagnostico</relationshipName>
    <type>Lookup</type>
</CustomField>