zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Caso creado si el diagnostico escalo por seguridad.</description>
    <label>Caso generado</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Sesiones de diagnostico</relationshipLabel>
    <relationshipName>Sesiones_Diagnostico</relationshipName>
    <type>Lookup</type>
</CustomField>