zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Une la sesion con el log del agente y con la orden o el caso que genere.</description>
    <label>Correlation Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>