zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <description>Momento del diagnostico.</description>
    <label>Fecha</label>
    <type>DateTime</type>
</CustomField>