zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/fields/Knowledge_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Id__c</fullName>
    <description>Articulo que sustento la guia. Sin fuente no se afirma nada.</description>
    <label>Id de articulo Knowledge</label>
    <length>80</length>
    <type>Text</type>
</CustomField>