zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <description>Modelo consultado. El diagnostico funciona por modelo aunque no haya unidad identificada.</description>
    <label>Modelo</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sesiones de diagnostico</relationshipLabel>
    <relationshipName>Sesiones_Diagnostico</relationshipName>
    <type>Lookup</type>
</CustomField>