zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/fields/Pasos_Seguidos__c.field-meta.xml
<CustomField>
    <fullName>Pasos_Seguidos__c</fullName>
    <description>Que se le indico al operador y que reporto de vuelta. Es la evidencia de la conversacion.</description>
    <label>Pasos seguidos</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>