zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <description>Las cuatro bifurcaciones del arbol de diagnostico del briefing.</description>
    <label>Resultado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>RESUELTO_SIN_CITA</fullName>
                </value>
                <value>
                    <fullName>REQUIERE_TALLER</fullName>
                    <default>true</default>
                    <label>REQUIERE_TALLER</label>
                </value>
                <value>
                    <fullName>UNIDAD_NO_VIABLE</fullName>
                </value>
                <value>
                    <fullName>ESCALADO_SEGURIDAD</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>