zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/fields/Sintoma__c.field-meta.xml
<CustomField>
    <fullName>Sintoma__c</fullName>
    <description>Sintoma reportado por el operador.</description>
    <label>Sintoma</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Sintoma__c</referenceTo>
    <relationshipLabel>Sesiones de diagnostico</relationshipLabel>
    <relationshipName>Sesiones_Diagnostico</relationshipName>
    <type>Lookup</type>
</CustomField>