zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/fields/Tiene_Herramientas__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Herramientas__c</fullName>
    <description>El briefing bifurca segun la capacidad real del usuario. Sin herramientas no se guia, se deriva.</description>
    <label>Tiene herramientas</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>