zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <description>Orden creada si el diagnostico derivo en cita.</description>
    <label>Orden generada</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Sesiones de diagnostico</relationshipLabel>
    <relationshipName>Sesiones_Diagnostico</relationshipName>
    <type>Lookup</type>
</CustomField>