zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/validationRules/Requiere_Fuente_Knowledge.validationRule-meta.xml
<ValidationRule>
    <fullName>Requiere_Fuente_Knowledge</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Resultado__c, "RESUELTO_SIN_CITA"), ISBLANK(Knowledge_Article_Id__c))</errorConditionFormula>
    <errorDisplayField>Knowledge_Article_Id__c</errorDisplayField>
    <errorMessage>No se puede cerrar un caso sin cita sin citar el articulo que lo sustenta.</errorMessage>
</ValidationRule>