zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/validationRules/Resuelto_Sin_Cita_Requiere_Pasos.validationRule-meta.xml
<ValidationRule>
    <fullName>Resuelto_Sin_Cita_Requiere_Pasos</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Resultado__c, "RESUELTO_SIN_CITA"), ISBLANK(Pasos_Seguidos__c))</errorConditionFormula>
    <errorDisplayField>Pasos_Seguidos__c</errorDisplayField>
    <errorMessage>Un caso resuelto sin cita debe documentar los pasos que se le indicaron al operador. Sin evidencia no hay trazabilidad.</errorMessage>
</ValidationRule>