zapata-agentforce/force-app/main/default/objects/Sesion_Diagnostico__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Modelo__c</columns>
    <columns>Sintoma__c</columns>
    <columns>Resultado__c</columns>
    <columns>Tiene_Herramientas__c</columns>
    <columns>Fecha__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>